# eeebot-self-evolving

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  REPO_GITHUB_WORKFLOW_RULES.md  SECURITY.md  pyproject.toml  todo.md
ops/dashboard/: .gitignore  README.md  pyproject.toml  todo.md
ops/dashboard/control/: README.md  active_execution.json  active_projects.json  delegated_executor_request.json  eeepc_preactivation_verification.json  eeepc_privileged_activation_handoff.json  eeepc_privileged_subagent_telemetry_handoff_f14d33c.json  execution_assignment.json  execution_completion.json  execution_dispatch.json  execution_queue.json  pi_dev_dispatch.json  stale_execution_incident.json  stale_execution_next_action.json  stale_execution_redispatch.json
ops/dashboard/docs/: AUTONOMOUS_EXECUTION_AND_STAGNATION_CONTROL.md  AUTONOMY_CONTROL_RUNBOOK.md  DISCARD_REVERT_ENFORCEMENT_E2E_PROOF.md  EEEBOT_AUDIT_REMEDIATION_PROOF.md  EEEPC_PRIVILEGED_LIVE_ACTIVATION_HANDOFF.md  EEEPC_PRIVILEGED_LIVE_ACTIVATION_HANDOFF_2722EE19.md  EEEPC_PRIVILEGED_SUBAGENT_TELEMETRY_HANDOFF_F14D33C.md  EXPERIMENT_CONTRACTS_FRONTIER_E2E_PROOF.md  EXPERIMENT_DISCIPLINE_VISIBILITY_E2E_PROOF.md  HADI_WSJF_CREDITS_SUBAGENTS_E2E_PROOF.md  IMPLEMENTATION_SUMMARY.md  SHOWING_THE_DASHBOARD.md  autonomy_control_registry.json
ops/dashboard/scripts/: analyze_active_remediation.py  analyze_project_autonomy.py  analyze_stagnation.py  build_status_feed.py  build_status_snapshot.py  consume_delegated_executor_requests.py  consume_execution_queue.py  consume_execution_requests.py  consume_executor_handoffs.py  (+14 more)
(+334 files in other folders)
