[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobot-ops-dashboard"
version = "0.1.0"
description = "Local observability dashboard for Nanobot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
]

[project.scripts]
nanobot-ops-dashboard = "nanobot_ops_dashboard.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
